# docs

./: .gitignore  .gitmodules  .lycheeignore  CLAUDE.md  README.md  RESTRUCTURE_PLAN.md  Regenerative Finance and Celo: The Process and Partnership.md  SUMMARY.md  _redirects  celo-sage-template  crowdin.yml  docs.json  docusaurus.config.js  financialrevolution.md  glossary.mdx  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  sidebars.js  style.css  tailwind.config.js  tsconfig.json  update_remote_links.sh  webpack.config.js
.github/: CODEOWNERS  renovate.json5
.github/PULL_REQUEST_TEMPLATE/: celo-sage-template.md
.github/workflow/: build-fix.yml  main.yml
.github/workflows/: build-and-deploy.yml  build-deploy.yml  build-fix.yml  claude-code-review.yml  codeql.yml  docs-validation.yml  links.yml  mintlify-ci.yml  node.js.yml  preview.yml  (+1 more)
01-21-2023-how-to-build-a-basic-crud-app-in-solidity/: how-to-build-a-basic-crud-app-in-solidity.md
03-7-23-How-to-build-a-fullstack-dapp-for-selling-football-tickets/: footballTicket-tutorial-sage.md
13-03-2023-How-to-connect-to a-node-on-the-celo-using-docker/: 13-03-2023-How-to-connect-to a-node-on-the-celo-using-docker.md
blog/: 01-18-2023-pros-and-cons-of-celo-to-create-decentralized-applications  02-15-2023-overview-of-nfts-on-the-celo-platform  02-15-2023-overview-of-nfts-on-the-celo-platform.md  10-01-2023-create-an-escrow-nft-platform-on-celo-with-python.md  12-20-2022-Potential-Growth-of-Blockchain-and-its-Use-Cases  12-20-2022-Potential-Growth-of-Blockchain-and-its-Use-Cases.md  13-03-2023-How-to-connect-to a-node-on-the-celo-using-docker.md  2021-06-25-Celo Crowd Funding Project Tutorial.md  2021-06-26-How to create a ERC1155 NFT in Celo Network with Hardhat.md  2021-06-27-Deploy Celo Smart contracts with Remix IDE.md  2021-06-28-Hello Mobile DApp.md  2021-06-29-Create subgraphs for Celo smart contracts.md  2021-06-30-Send CELO & cUSD.md  2021-06-31-How to re-deploy your Ethereum DApp to Celo.md  2021-07-01-Create Vault Smart Contract.md  2021-07-02-Build a Decentralized Autonomous Organization (DAO) on Celo.md  2021-07-03-Introduction to dApp kit.md  2021-07-05-Distributed File Manager (DFM) using Celo, IPFS and ReactJS.md  2021-07-06-Testing Celo Smart Contracts with Truffle.md  2021-07-07-How to use Moola’s money market.md  2021-07-08-Deploy and Interact with Contracts (Remotely).md  2021-07-09-How to customize an Ethereum smart contract for the Celo network.md  2021-07-10-How to successfully connect to a Celo Wallet with a React Native DApp.md  2021-07-11-Deploying smart contracts on Celo with Truffle.md  2021-07-12-How to mint your own fungible token on Celo.md  2021-09-01-Celo Development 101.md  2021-09-02-Celo Development 201 - Build an NFT Minter with Hardhat and React.md  2021-11-08-contributing.md  2021-11-08-optics-faq.md  2021-11-15-code-playground.md  2021-11-15-connect-to-metamask.md  2021-11-16-connect-to-metamask.md  2021-12-06-addtokentocelowallet.md  2021-12-31-using-js-keystores.md  2022-01-01-hellocelo.md  2022-01-02-hellocontracts.md  2022-01-03-hello-contract-remote-node.md  2022-01-04-no-code-erc20.md  2022-01-05-no-code-erc721.md  2022-01-06-web-dapp.md  (+58 more)
build-on-celo/: attribution-tags.mdx  build-on-socialconnect.mdx  build-with-bridge.mdx  build-with-defi.mdx  build-with-farcaster.mdx  build-with-local-stablecoin.mdx  build-with-self.mdx  cel2-architecture.mdx  fund-your-project.mdx  index.mdx  launch-checklist.mdx  network-overview.mdx  nightfall.mdx  quickstart.mdx  scaling-your-app.mdx  support.mdx
cli/: identity.mdx  index.mdx  multisig.mdx  releasecelo.mdx  validator.mdx
contribute-to-celo/: builders.mdx  code-of-conduct.mdx  daos.mdx  index.mdx
docs/: FAQs.md  cli  cli-index.md  contract-addresses.md  faqs.md  glossary.md  overview.md  thank-you.md  token-addresses.md  uniswap-addresses.md  wallet-test.md  welcome.md
home/: celo.mdx  exchanges.mdx  gas-fees.mdx  history.mdx  index.mdx  ramps.mdx  wallets.mdx
infra-partners/: specs.mdx
learn/: add-gas-currency.mdx  celo-blockchain-sync-modes.md  celo-economic-model.mdx  celo-ecosystem.mdx  celo-highlights.mdx  celo-onboarding.mdx  celo-protocol-summary.mdx  celo-resources.mdx  developer-onboarding.mdx  topology-of-a-celo-network.mdx
legacy/: faq.mdx  l1-architecture.mdx  overview.mdx  whitepapers.mdx
mintlify-migration/: broken.mdx  example.mdx  file_changes_mapping.txt  glossary.mdx  index.mdx  index_old.mdx
netlify_packages/libsecret/: Makefile.am  Secret-1.metadata  libsecret-unstable.pc.in  libsecret.pc.in  mock-service-delete.py  mock-service-empty.py  mock-service-lock.py  mock-service-normal.py  mock-service-only-plain.py  mock-service-prompt.py  mock-service.c  mock-service.h  org.freedesktop.Secrets.xml  secret-attributes.c  secret-collection.c  secret-enum-types.c  secret-enum-types.c.template  secret-enum-types.h  secret-enum-types.h.template  secret-item.c  secret-methods.c  secret-password.c  secret-paths.c  secret-private.h  secret-prompt.c  secret-schema.c  secret-schemas.c  secret-schemas.h  secret-service.c  secret-session.c  secret-util.c  secret-value.c  test-attributes.c  test-collection.c  test-item.c  test-js-clear.js  test-js-lookup.js  test-js-store.js  test-methods.c  test-password.c  (+10 more)
netlify_packages/libsecret/mock/: __init__.py  aes.py  dh.py  hkdf.py  service.py
notices/: index.mdx  l1-fusaka-upgrade.mdx
restructure-research/: 01-benchmark-report.md  02-restructure-review.md  03-web2-readability-audit.md  04-freshness-automation-proposal.md  05-skills-and-feedback-discussion.md  README.md
scripts/: README.md  copy-generated-docs.sh  update_contracts.py  validate-docs.sh
snippets/: AddNetworkButton.jsx  ColoredText.jsx  InlineImage.mdx  YouTube.jsx  home.jsx  schema.mdx  tokens.mdx
specs/: deployments.mdx  eigenda.mdx  fee-abstraction.mdx  finality.mdx  index.mdx  l1-smart-contract-verification.mdx  l2-migration.mdx  native-bridge.mdx  smart-contract-updates-from-l1.mdx  token-duality.mdx  transaction-fees.mdx  transaction-types.mdx
static/: _redirects
(+2163 files in other folders)
